--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT = 4000
 MONG_URI = mongodb+srv://Webby:proj123@projisd.d8gadsz.mongodb.net/?retryWrites=true&w=majority
+EMAIL=webdevelopers.410@gmail.com
+PASSWORD = kiaviikrjehbawrh
