--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "nexmo": "^2.9.1",
+    "nodemailer": "^6.8.0",
+    "socket.io": "^4.5.3"
   }
 }
