--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "4.0.3",
     "stream": "^0.0.2",
@@ -23,7 +24,7 @@
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
-},
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,9 +37,9 @@
       "react-app/jest"
     ]
   },
-  "devDependencies":{
+  "devDependencies": {
     "react-error-overlay": "6.0.9"
-},
+  },
   "browserslist": {
     "production": [
       ">0.2%",
