--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "nexmo": "^2.9.1",
     "nodemailer": "^6.8.0",
     "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
