--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
