--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
@@ -21,7 +23,8 @@
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
