--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
+    "node-sass": "^7.0.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
