--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "nexmo": "^2.9.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "react-scripts": "^5.0.1",
